# school-master

./: README.md
ni-adm-master/: .gitignore  README.md  competition.ipynb  roc_curve.ipynb
ni-adm-master/data/: test24k.csv
ni-kop-master/: .gitignore  README.md
ni-kop-master/KOP-1/: Evernote export.enex  GraphGenerator.ipynb  README.md
ni-kop-master/KOP-2/: GraphGenerator - CPU Times.ipynb  GraphGenerator - Heuristics Rel. Error.ipynb  GraphGenerator - Rel. Error FPTAS.ipynb  README.md  Report KOP 02.enex
ni-kop-master/KOP-3/: Experiments-BnB.ipynb  Experiments-BruteForce.ipynb  Experiments-DP-PD.ipynb  Experiments-Greedy.ipynb  README.md  Report_KOP_03.enex
ni-kop-master/KOP-4/: Experiments.ipynb  README.md  Report_KOP_04.enex
ni-kop-master/KOP-5/: PlotsForGeneratedData.ipynb  PlotsForGivenDatasets.ipynb  README.md  Report_KOP_05.enex
ni-mpi/: MPI-schejond.ipynb
ni-mvi/: schejond_mvi.ipynb
ni-pdd-master/: .gitignore  README.md
ni-pdd-master/01/: 01_homework.ipynb
ni-pdd-master/02/: 02_homework.ipynb
ni-pdd-master/03/: 03_homework.ipynb
ni-pdp-master/: .gitignore  README.md
ni-pdp-master/01/: CMakeLists.txt  main.cpp
ni-pdp-master/2/: CMakeLists.txt  editedSeq.cpp  main.cpp
ni-pdp-master/3/: CMakeLists.txt  Stats.ipynb  main.cpp  runAllScript
ni-pdp-master/4/: CMakeLists.txt  main.cpp
ni-pdp-master/5/: Makefile  PrepareTables.ipynb  howToStar.txt  pdp_report_schejond.tex  run_mpi.sh  run_ompDat.sh  run_ompTask.sh  (+1 more)
ni-scr/: README.md  Semestralka - covid.ipynb  nakaza.csv
ni-umi-master/: README.md
ni-vsm-master/: .gitignore
(+7462 files in other folders)
